--- a/AdventureKaan/app/src/main/res/values/strings.xml
+++ b/AdventureKaan/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
     <string name="btn_deep_link">Deep Link</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="title_archaeological_zones">Zonas</string>
+    <string name="title_videos">Videos</string>
+    <string name="title_culture">Cultura</string>
 </resources>
